<resources>
    <string name="app_name">JgsWeather</string>
    <string name="open_wheather_app_id">26d03a8d04e10175ea2046b8152250a7</string>
    <string name="processing">Processando</string>
    <string name="searching_current_weather">Buscando clima…</string>
    <string name="error">Erro</string>
    <string name="ok">OK</string>
    <string name="label_min">Min.: %s</string>
    <string name="label_max">Máx.: %s</string>
    <string name="label_weather">Clima: %s</string>
    <string name="city_added">Cidade adicionada!</string>
    <string name="forecast_updated">Previsão atualizada!</string>
    <string name="current_weather_updated">Clima atual atualizado!</string>
    <string name="city_already_exists_in_database">Cidade já existe na base!</string>
    <string name="label_city">Cidade:</string>
    <string name="add">Adicionar</string>
    <string name="label_cities">Cidades:</string>
    <string name="hint_insert_city">Informe o nome da cidade</string>
    <string name="city_deleted">Cidade excluída!</string>
    <string name="query_with_no_result">Consulta sem resultados!</string>
    <string name="device_not_connected_to_network">Smartphone não conectado com a rede!</string>
    <string name="warning">Alerta</string>
    <string name="cities">Cidades</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="today">Hoje</string>
    <string name="refresh">Atualizar</string>
    <string name="label_current">Atual: %s</string>
    <string name="tomorrow">Amanhã</string>
    <string name="yesterday">Ontem</string>
    <string name="sort_by_name">Ordernar por nome</string>
    <string name="sort_by_min">Ordernar por mínimo</string>
    <string name="sort_by_max">Ordernar por máximo</string>
    <string name="forecast">Previsão</string>
    <string name="back">Voltar</string>
    <string name="weather_icon">Weather icon</string>
    <string name="description">Descrição</string>
    <string name="label_current_temperature">Temperatura atual</string>
    <string name="label_temperature_min">Temperatura mínima</string>
    <string name="label_temperature_max">Temperatura máxima</string>
</resources>
