<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_city"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CityActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_margin_vertical"
        android:layout_marginBottom="@dimen/activity_margin_vertical"
        android:layout_marginStart="@dimen/activity_margin_horizontal"
        android:layout_marginLeft="@dimen/activity_margin_horizontal"
        android:layout_marginEnd="@dimen/activity_margin_horizontal"
        android:layout_marginRight="@dimen/activity_margin_horizontal">

        <TextView
            android:id="@+id/activity_city_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_city"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <EditText
            android:id="@+id/activity_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_city_label_name"
            android:hint="@string/hint_insert_city"
            android:inputType="textCapSentences"
            android:lines="1"
            android:imeOptions="actionDone"
            />

        <Button
            android:id="@+id/activity_city_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/activity_city_name"
            android:layout_centerHorizontal="true"
            android:text="@string/add" />

        <TextView
            android:id="@+id/activity_city_label_cities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_city_add"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_cities"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_city_cities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/activity_city_label_cities"
            />

    </RelativeLayout>

    <include
        android:id="@+id/activity_city_progress"
        layout="@layout/container_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>