<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <RelativeLayout
        android:id="@+id/item_list_weather_column_1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/item_list_weather_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blumenau"/>

        <ImageView
            android:id="@+id/item_list_weather_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/item_list_weather_city"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_list_weather_column_2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/item_list_weather_column_1"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/item_list_weather_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/label_weather"/>

        <TextView
            android:id="@+id/item_list_weather_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_list_weather_status"
            android:layout_marginBottom="8dp"
            android:text="@string/label_min"/>

        <TextView
            android:id="@+id/item_list_weather_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_list_weather_min"
            android:text="@string/label_max"/>

    </RelativeLayout>

</RelativeLayout>