<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/item_card_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="8dp"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginLeft="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_margin_horizontal"
        android:layout_marginRight="@dimen/activity_margin_horizontal"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/item_card_weather_icon"
                android:layout_width="@dimen/card_icon_widht"
                android:layout_height="@dimen/card_icon_height"
                android:layout_margin="8dp"
                android:contentDescription="@string/weather_icon"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_card_weather_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/item_card_weather_label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_title"
                />

            <TextView
                android:id="@+id/item_card_weather_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_label_description" />

            <TextView
                android:id="@+id/item_card_weather_label_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/label_current_temperature"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_card_weather_temp"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_condition" />

            <TextView
                android:id="@+id/item_card_weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_label_temp"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_condition"
                app:layout_constraintBaseline_toBaselineOf="@+id/item_card_weather_label_temp"
                />

            <TextView
                android:id="@+id/item_card_weather_label_temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/label_temperature_min"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_label_temp"
                />

            <TextView
                android:id="@+id/item_card_weather_temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_label_temp_min"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_temp"
                app:layout_constraintBaseline_toBaselineOf="@+id/item_card_weather_label_temp_min"/>

            <TextView
                android:id="@+id/item_card_weather_label_temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/label_temperature_max"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_label_temp_min" />

            <TextView
                android:id="@+id/item_card_weather_temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/item_card_weather_label_temp_max"
                app:layout_constraintTop_toBottomOf="@+id/item_card_weather_temp_min"
                app:layout_constraintBaseline_toBaselineOf="@+id/item_card_weather_label_temp_max"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>